# tmux-bar

./: .tmux-bar.yaml  Cargo.toml  README.md
.github/workflows/: rust.yml
lib/: icons.rs  mod.rs
lib/system/: cpu.rs
src/: config.rs  lib.rs  main.rs  module.rs
src/cli/: config.rs  main.rs
src/icons/: mod.rs
src/modules/: mod.rs
